--- a/config.json
+++ b/config.json
@@ -1,7 +1,8 @@
 {
-    "Owner": "972544558485",
-    "SourceGroup": "972544885458-1633190920@g.us",
+    "Owner": "972544911249",
+    "SourceGroup": "972544911249-1633190920@g.us",
     "ForwarToGroups":[ "120363038986141427@g.us",
-                     "972544555874-1633190920@g.us",
-                     "972544955595@c.us"]
+                     "972544911249-1633190920@g.us",
+                     "972544911249@c.us"],
+    "PathToChrome": "C:/Program Files/Google/Chrome/Application/chrome.exe"
 }
