Example for two owners

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "Owner": "97254465454",
+    "Owner": ["97254465454", "972554458"],
     "SourceGroup": "972544946545-1633190920@g.us",
     "ForwarToGroups":[ "120363038986141427@g.us",
                      "97254654654-1633190920@g.us",
